some drifts to implement update character mechanism